--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -109,12 +109,12 @@ main.joinpage {
     max-width:75%; 
 }
 .memberform {
-    background-color:#2D5771;
+    background-color:#B6E7F2;
     padding:.80rem;
 }
 
 label.top {
-    color:#262473;
+    color:#2D5771;
     display:block;
 }
 
@@ -122,19 +122,5 @@ label.top {
     padding:.75rem 0;
 }
 
-.stormrange {
-    color:#262473;
-    padding:.75rem 0;
-}
-
-.scale, .sbs {
-    color:#262473;
-    display:block;
-    padding:.75rem 0;
-}
-
-form label.top input:required {
-    border:2px solid #262473;
-}
 }
 
