--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -20,4 +20,24 @@ nav ul.hide {
     justify-content:space-evenly;
 }
 
+h2 {
+    text-align:left;
+    padding:3rem;
+}
+
+/*----Contact Page----*/
+.contactinfo {
+    display:flex;
+    flex-direction:row;
+    padding:1.1rem;
+}
+.bgallery {
+    display:flex;
+    flex-direction:row;
+    padding:1.2rem;
+}
+.gallery li:hover {
+    box-shadow: 0 5px 50px #737373;
+}
+
 }
