--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -163,6 +163,9 @@ p.contactinfo {
     width: 20%;
     height:auto;
 }
+.gallery {
+    padding:2rem;
+}
 .gallery ul {
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
