--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -69,6 +69,7 @@ nav ul.hide {
 }
 
 h2 {
+    text-align:center;
     font-family:'Cormorant Garamond', serif;
     font-weight:bold;
     font-size:1.6rem;
@@ -110,9 +111,10 @@ img.socialicons {
     bottom:15px;
     left:15px;
 }
-.weathersummary {
+.weathersummary h2 {
     grid-column:1/3;
     margin:.2em;
+    font-weight:bold;
 }
 img.homeSpotlight {
     width:10%;
