--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -99,22 +99,39 @@ img.socialicons {
 /*------Home Page-------*/
 .heroimg {
     position:relative;
+    padding:0;
 }
-.weathersummary {
+.wsummary h3 {
+    text-align:left;
+    text-decoration:underline;
+    margin:.2em;
+    font-weight:bold;
+}
+.gridlayout {
     display:grid;
-    grid-gap:.3em;
+    grid-template-columns: 1fr 1fr;
+}
+.wsummary {
+    position:absolute;
     background-color:#D2E7FA;
     padding:.5em;
     width: max-content;
     box-shadow: 0 0 5px #011126;
-    position:absolute;
-    bottom:15px;
-    left:15px;
+    text-align:left;
 }
-.weathersummary h2 {
-    grid-column:1/3;
-    margin:.2em;
+.category {
+    color:#2D5771;
+    margin-right:.5rem;
+    font-family:'Raleway', sans-serif;
     font-weight:bold;
+}
+.conditions {
+    color:#2D5771;
+    font-family:'Raleway', sans-serif;
+    font-weight:bold;
+}
+#desc {
+    text-transform:capitalize;
 }
 img.homeSpotlight {
     width:10%;
@@ -129,19 +146,7 @@ img.homeSpotlight {
     flex-direction:column;
     justify-content:center;
 }
-.category {
-    text-align:right;
-    font-family:'Raleway', sans-serif;
-    font-weight:bold;
-}
-.conditions {
-    color:#2D5771;
-    font-family:'Raleway', sans-serif;
-    font-weight:bold;
-}
-#desc {
-    text-transform:capitalize;
-}
+
 .forecast {
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
