--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -6,19 +6,12 @@ header img {
 }
 
 /*------Home Page-----*/
-img.homeSpotlight {
-    width:30%;
-    padding:5rem;
-}
-
-.homeSpotlight {
+b.cards {
     display:flex;
     flex-direction:row;
-    flex:30%;
-    justify-content:center;
-    background-color:#2D5771;
-    color:#FFFFFF;
-}
+    width:30%;
+    padding:5rem;
+
 }
 
 /*------Thanks Page-----*/
