--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -133,6 +133,15 @@ img.socialicons {
 #desc {
     text-transform:capitalize;
 }
+.homebtn {
+    color:white;
+    padding:15px 32px;
+    text-align: center;
+    text-decoration:none;
+    display:inline-block;
+    margin:4px 2px;
+    background-color:#2D5771;
+}
 .bcards {
     display:flex;
     flex-direction:column;
