--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -24,6 +24,11 @@ h2 {
     padding:3rem;
 }
 
+.sgallery {
+    display:flex;
+    flex-direction:row;
+    padding:1.2rem;
+}
 /*----Contact Page----*/
 .contactinfo {
     display:flex;
