--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -205,7 +205,7 @@ h2.hcontactinfo {
     justify-content:center;
     width: 50%;
     height:auto;
-    border: 7px solid #D2E7FA;
+    border: 7px solid #FFFFFF;
 }
 /*------Join Page ---------*/
 .joinpage {
