parse error correction

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -185,7 +185,7 @@ div.forecast {
 .day,dayweather {
     border:1px solid #2D5771;
     padding:0.3em;
-    background-color: ;
+    background-color:#D2E7FA;
 }
 .dayweather {
     background-color:#D2E7FA;
