--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -264,6 +264,7 @@ p.contactinfo {
 .gallery ul {
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    list-style-type:none;
     grid-gap:1rem;
     padding:0;
     justify-content: center;
@@ -298,4 +299,28 @@ p.contactinfo {
 .cevents p{
     line-height:2rem;
 }
+.cevents h2 {
+    margin:0 auto;
+    padding:0;
+}
+.cgallery ul {
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    list-style-type:none;
+    grid-gap:1rem;
+    padding:0;
+}
+.cgallerygrid {
+    position:relative;
+    margin:0;
+    overflow:hidden;
+}
 
+.cgallerygrid img {
+    width:90%;
+    padding:10px;
+}
+
+.cgallerygrid li p {
+   padding:5px;
+}
