--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -50,5 +50,8 @@ h2 {
 h2 .gallery {
     padding:1.2rem;
 }
-
+/*------Directory Page----*/
+.bcards {
+    grid-template-columns:1fr 1fr 1fr 1fr;
+}
 }
