--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -177,17 +177,17 @@ div.forecast {
     grid-template-columns:1fr 1fr 1fr;
     text-align:center;
 }
-.dayweather img {
+.daysweather img {
     display:block;
     margin:0 auto;
     padding:0.2em;
 }
-.day,dayweather {
+.days,daysweather {
     border:1px solid #2D5771;
     padding:0.3em;
     background-color:#D2E7FA;
 }
-.dayweather {
+.daysweather {
     background-color:#D2E7FA;
 }  
 h2.hcontactinfo {
