--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -323,7 +323,7 @@ p.contactinfo {
    padding:5px;
 }
 /*-----Directory Page------*/
-.cards section {
+.bcards section {
     border: 2px solid white;
 }
 .bcards {
@@ -344,4 +344,15 @@ b.cards img {
     max-width:60%;
     box-shadow: 0px 0px 10px 2px #011126;
     margin:1rem;
+}
+
+.column {
+    float:left;
+    width:50%;
+    padding:10px;
+}
+.row:after {
+    content: "";
+    display:table;
+    clear:both;
 }
